<resources>
    <string name="app_name">MangaReader</string>

    <string name="local_storage">Local storage</string>

    <!-- navigation drawer -->
    <string name="catalogue">Catalogue</string>
    <string name="library">Library</string>
    <string name="download_queue">Download queue</string>
    <string name="settings">Settings</string>

    <!-- Snacks -->
    <string name="retry">Retry</string>
    <string name="go_back">Go back</string>

    <string name="error_mangas_list_load">Could not load mangas list</string>
    <string name="error_manga_load">Could not load manga</string>
    <string name="error_chapter_load">Could not load chapter</string>
    <string name="error_empty_chapter">Chapter does not contains any pages</string>
    <string name="error_page_load">Could not load page</string>

    <!-- Manga activity -->
    <string name="cover">Cover</string>
    <string name="authors">Authors</string>
    <string name="genres">Genres</string>
    <string name="rating">Rating</string>
    <string name="source">Source</string>
    <string name="show_summary">Show summary</string>

    <string name="status">Status</string>
    <string name="status_unknown">Unknown</string>
    <string name="status_ongoing">Ongoing</string>
    <string name="status_finished">Finished</string>
    <string name="status_licensed">Licensed</string>

    <string name="download">Download</string>
    <string name="delete">Delete</string>

    <!-- Page activity -->
    <string name="page_picture">Page picture</string>

    <!-- Download service -->
    <string name="error">Error</string>
    <string name="channel_name">Chapter download</string>
    <string name="channel_description">Show chapter download progress</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
